elastic-eck/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-eck
  labels:
    simonstiil/ca-secret-enabled: "true"
